--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -18,6 +18,7 @@
 @import './element/buttons';
 @import './element/menu';
 @import './element/modale';
+@import './element/avatar';
 
 // #Pages
 @import './pages/home/home';
