--- a/assets/css/element/_page-title.scss
+++ b/assets/css/element/_page-title.scss
@@ -37,20 +37,23 @@
     }
   }
   h1 {
-    font-size: 18px;
+    font-size: 24px;
     margin-top: 0;
     margin-bottom: 0;
+    font-family: $font-primary;
+    font-weight: 300;
+    color: #585858;
     @include bp(small) {
-      font-size: 24px;
+      font-size: 28px;
       margin: 0 5px;
       margin-top: 0;
     }
     @include bp(xmedium) {
       margin: 0 10px 0 10px;
-      font-size: 28px;
+      font-size: 32px;
     }
     @include bp(large) {
-      font-size: 32px;
+      font-size: 72px;
     }
   }
 }
