--- a/assets/css/element/_buttons.scss
+++ b/assets/css/element/_buttons.scss
@@ -131,6 +131,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    color: $color-blue;
     @include bp(xmedium) {
       width: 80px;
       height: 80px;
