--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -212,6 +212,9 @@ label {
       &:nth-child(3) {
         width: 50%;
       }
+      &:nth-child(4) {
+        width: 50%;
+      }
     }
   }
   .ant-space-item {
