--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -19,6 +19,7 @@
 @import './element/menu';
 @import './element/modale';
 @import './element/avatar';
+@import './element/sitebar';
 
 // #Pages
 @import './pages/home/home';
