--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -2,6 +2,7 @@
   padding-right: 20px;
   position: relative;
   max-width: 350px;
+  margin-bottom: 20px;
   @include element(header) {
     width: 100%;
     display: flex;
