--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -268,6 +268,11 @@ h5 {
 
 .is-login {
   background: $bg-blue;
+  &.profile {
+    background: #fafafa;
+    // $color-primary: red;
+    // color: $color-primary;
+  }
 }
 
 .umana-section-contenct {
