--- a/assets/css/element/_avatar.scss
+++ b/assets/css/element/_avatar.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  flex-wrap: wrap;
+  flex-direction: column-reverse;
+  @include bp(medium) {
+    flex-direction: row;
+  }
   @include element(content) {
     flex: 1 1 50%;
     color: $color-text;
