--- a/assets/css/element/_page-title.scss
+++ b/assets/css/element/_page-title.scss
@@ -4,7 +4,7 @@
   display: flex;
   margin-bottom: 20px;
   align-items: center;
-  margin-left: -20px;
+  // margin-left: -20px;
   @include bp(xmedium) {
     margin-left: 0;
   }
