--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -4,21 +4,22 @@
   max-width: 350px;
   margin-bottom: 20px;
   @include element(header) {
+    margin-bottom: 20px;
     width: 100%;
     display: flex;
     .header-icon {
-      margin-right: 10px;
+      margin-right: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
       background: $color-primary;
-      width: 60px;
-      height: 60px;
-      min-width: 60px;
-      min-height: 60px;
+      width: 40px;
+      height: 40px;
+      min-width: 40px;
+      min-height: 40px;
       border-radius: 50%;
       i {
-        font-size: 35px;
+        font-size: 25px;
         color: $color-white;
       }
     }
@@ -54,7 +55,8 @@
       &.ant-menu-item-selected {
         box-shadow: $shadow;
         color: $color-primary;
-        background: $color-white;
+        background: $color-white !important;
+        background-color: $color-white;
         a {
           color: $color-primary;
         }
@@ -69,7 +71,7 @@
         }
       }
       & > i {
-        width: 50px;
+        width: 35px;
         text-align: center;
         position: absolute;
         top: 50%;
