--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -73,7 +73,7 @@ h5 {
 
   &--contents {
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
     background-color: #ffffff;
   }
 }
@@ -103,13 +103,7 @@ h5 {
     &.is-login {
       background: $color-white;
       @include bp(xmedium) {
-        background: linear-gradient(
-          to bottom,
-          rgba(245, 252, 254, 1) 0%,
-          rgba(245, 252, 254, 1) 60%,
-          rgba(245, 252, 254, 0.5) 80%,
-          rgba(245, 252, 254, 0) 100%
-        );
+        background: linear-gradient(to bottom, rgba(245, 252, 254, 1) 0%, rgba(245, 252, 254, 1) 60%, rgba(245, 252, 254, 0.5) 80%, rgba(245, 252, 254, 0) 100%);
       }
     }
   }
@@ -195,8 +189,7 @@ h5 {
     justify-content: flex-end;
     align-items: center;
   }
-  &
-    > button.ant-btn.ant-btn-primary.ant-btn-circle.ant-btn-lg.ant-btn-icon-only.ant-btn-background-ghost {
+  & > button.ant-btn.ant-btn-primary.ant-btn-circle.ant-btn-lg.ant-btn-icon-only.ant-btn-background-ghost {
     width: 50px;
     margin: 0;
     margin-left: auto;
@@ -238,13 +231,7 @@ h5 {
   flex-wrap: wrap;
   padding: 30px 0;
   &.bg-color {
-    background: linear-gradient(
-      to bottom,
-      $bg-blue 0,
-      $bg-blue 400px,
-      $color-white 400px,
-      $color-white 100%
-    );
+    background: linear-gradient(to bottom, $bg-blue 0, $bg-blue 400px, $color-white 400px, $color-white 100%);
   }
   @include element(flex) {
     padding: 30px 20px;
