--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -102,8 +102,9 @@ h5 {
     height: 60px;
     &.is-login {
       background: $color-white;
+      height: 80px;
       @include bp(xmedium) {
-        background: linear-gradient(to bottom, rgba(245, 252, 254, 1) 0%, rgba(245, 252, 254, 1) 60%, rgba(245, 252, 254, 0.5) 80%, rgba(245, 252, 254, 0) 100%);
+        background: linear-gradient(to bottom, rgba(245, 252, 254, 1) 0%, rgba(245, 252, 254, 1) 80%, rgba(245, 252, 254, 0.5) 95%, rgba(245, 252, 254, 0) 100%);
       }
     }
   }
