--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -5,6 +5,7 @@
 @import 'structure';
 @import 'grids';
 @import 'menus';
+@import 'info';
 // @import "forms";
 @import 'contents';
 @import 'misc';
