--- a/assets/css/element/_card.scss
+++ b/assets/css/element/_card.scss
@@ -45,6 +45,10 @@
   &:hover {
     box-shadow: $shadow;
   }
+  * {
+    font-weight: 400;
+    line-height: 1.3;
+  }
   @include element(options) {
     width: 100%;
     position: absolute;
@@ -73,7 +77,7 @@
     line-height: 1.2;
     text-align: center;
     margin: 10px auto 15px;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 18px;
     @include bp(small) {
       font-size: 20px;
@@ -108,6 +112,189 @@
       background: $color-blue;
       color: $color-white;
       box-shadow: $shadow-input;
+    }
+  }
+  @include element(parent-info) {
+    // margin-bottom: 10px;
+    width: 100%;
+    .title {
+      font-weight: 400;
+    }
+    .hidden-text {
+      width: 230px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      position: relative;
+      margin: 10px 0;
+      display: inline-block;
+      overflow: hidden;
+      max-width: 100%;
+      &::after {
+        content: '';
+        background: $color-orange;
+        display: block;
+        width: 100%;
+        height: 10px;
+        top: 28%;
+        position: absolute;
+        transform: rotate(-2.15deg);
+      }
+    }
+  }
+  &.content-start {
+    justify-content: flex-start;
+  }
+  &.card-xsmall {
+    min-width: 0;
+    @include bp(medium) {
+      min-height: 300px;
+      min-width: 0;
+      width: calc(50% - 20px);
+    }
+    @include bp(large) {
+      min-width: 0;
+      min-height: 300px;
+      max-width: none;
+      width: calc(25% - 20px);
+    }
+  }
+  &.card-theme-orange {
+    i,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    a {
+      color: $color-orange;
+      text-align: left;
+    }
+    .avatar-icon {
+      background: $color-orange;
+      margin-bottom: 10px;
+      i {
+        color: $color-white;
+        font-size: 35px;
+      }
+    }
+    a.umana-card__link {
+      color: $color-orange;
+      border: 1px solid $color-orange;
+      &:hover {
+        color: $color-white !important;
+        background: $color-orange;
+        i {
+          color: $color-white;
+        }
+      }
+    }
+  }
+  &.card-theme-blue {
+    .avatar-icon {
+      background: $color-blue;
+      margin-bottom: 10px;
+      i {
+        color: $color-white;
+        font-size: 35px;
+      }
+    }
+    .hidden-text {
+      width: 230px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      &:after {
+        background: $color-blue;
+      }
+    }
+    i,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      color: $color-blue;
+    }
+    a.umana-card__link {
+      color: $color-blue;
+      border: 1px solid $color-blue;
+      &:hover {
+        color: $color-white !important;
+        background: $color-blue;
+        i {
+          color: $color-white;
+        }
+      }
+    }
+  }
+  &.card-theme-green {
+    .avatar-icon {
+      background: $color-green;
+      margin-bottom: 10px;
+      i {
+        color: $color-white;
+        font-size: 35px;
+      }
+    }
+    .hidden-text {
+      width: 230px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      &:after {
+        background: $color-green;
+      }
+    }
+    i,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+      color: $color-green;
+    }
+    a.umana-card__link {
+      color: $color-green;
+      border: 1px solid $color-green;
+      &:hover {
+        color: $color-white !important;
+        background: $color-green;
+        i {
+          color: $color-white;
+        }
+      }
+    }
+  }
+  &.card-content-align-center {
+    div,
+    p,
+    h1,
+    h2,
+    h4,
+    h5 {
+      text-align: center;
+      align-items: center;
+    }
+  }
+  &.card-content-align-left {
+    div,
+    p,
+    h1,
+    h2,
+    h4,
+    h3,
+    h5 {
+      align-items: flex-start;
+      text-align: left !important;
+    }
+  }
+  &.card-type-simple {
+    .umana-card__title,
+    .umana-card__description,
+    .card-subtitle {
+      height: auto;
+      margin-bottom: 10px;
     }
   }
 }
