--- a/assets/css/element/_input.scss
+++ b/assets/css/element/_input.scss
@@ -239,3 +239,16 @@ textarea.ant-input {
     background-color: $color-primary;
   }
 }
+
+// progress
+.ant-progress.ant-progress-circle {
+  .ant-progress-text {
+    font-size: 18px;
+  }
+}
+
+.ant-tag {
+  font-size: 16px;
+  padding: 5px 10px;
+  margin: 5px;
+}
