--- a/assets/css/element/_menu.scss
+++ b/assets/css/element/_menu.scss
@@ -47,6 +47,7 @@
     }
     .ant-menu-item {
       padding: 0 10px;
+      margin: 0 !important;
       padding-bottom: 7px;
       border-bottom: 0;
       &:hover a,
