--- a/assets/css/element/_input.scss
+++ b/assets/css/element/_input.scss
@@ -244,6 +244,9 @@ textarea.ant-input {
 .ant-progress.ant-progress-circle {
   .ant-progress-text {
     font-size: 18px;
+    color: $color-text;
+    line-height: 1.3;
+    max-width: 100px;
   }
 }
 
