--- a/assets/css/element/_card.scss
+++ b/assets/css/element/_card.scss
@@ -287,6 +287,7 @@
     h5 {
       align-items: flex-start;
       text-align: left !important;
+      width: 100%;
     }
   }
   &.card-type-simple {
