--- a/assets/css/element/_buttons.scss
+++ b/assets/css/element/_buttons.scss
@@ -217,6 +217,9 @@
     &:active {
       background: $color-white;
     }
+    &.circle-fixed {
+      background: $color-white !important;
+    }
   }
   &.ant-btn-link {
     background: transparent;
@@ -421,6 +424,18 @@
   &.ant-btn-link.ant-btn-lg {
     i {
       font-size: 30px;
+    }
+  }
+  &.ant-btn-cancel {
+    width: 100%;
+    justify-content: center;
+    padding: 10px;
+    background: $color-white;
+    color: $color-text;
+    border: 1px solid rgba($color-text, 0.3);
+    &:hover {
+      color: $color-white;
+      border: 1px solid transparent !important;
     }
   }
 }
