--- a/assets/css/pages/catalgs.scss
+++ b/assets/css/pages/catalgs.scss
@@ -68,3 +68,44 @@
     font-size: 18px;
   }
 }
+
+.ant-pagination.mini.ant-table-pagination {
+  .ant-pagination-prev,
+  .ant-pagination-next {
+    &.ant-pagination-disabled {
+      color: $color-text;
+      border: 1px solid rgba($color-text, 0.1);
+      .ant-pagination-item-link {
+        color: rgba($color-text, 0.3);
+      }
+    }
+    color: $color-blue;
+    border: 1px solid $color-blue;
+    background: $color-white;
+    height: auto;
+    margin: 0 5px;
+    .ant-pagination-item-link {
+      font-size: 18px;
+      padding: 5px 10px;
+      color: $color-blue;
+    }
+  }
+  .ant-pagination-item {
+    height: auto;
+    padding: 5px 10px;
+    margin: 0 5px;
+    font-size: 18px;
+    border: 1px solid rgba($color-text, 0.1);
+    color: $color-text;
+    a {
+      color: $color-text;
+    }
+    &.ant-pagination-item-active {
+      color: $color-blue;
+      border: 1px solid $color-blue;
+      a {
+        color: $color-blue;
+      }
+    }
+  }
+}
