--- a/assets/css/element/_buttons.scss
+++ b/assets/css/element/_buttons.scss
@@ -280,8 +280,14 @@
     color: $color-primary;
   }
   &.ant-btn-orange {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: $color-orange;
     color: $color-white !important;
+    a {
+      color: $color-white;
+    }
     &:hover {
       background: $hover-orange;
     }
