--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -5,6 +5,36 @@
   margin-bottom: 20px;
   position: sticky;
   top: 100px;
+  &.theme-orange {
+    .header-icon {
+      background: $color-orange;
+    }
+    .header-content {
+      a {
+        color: $color-orange;
+      }
+    }
+  }
+  &.theme-green {
+    .header-icon {
+      background: $color-green;
+    }
+    .header-content {
+      a {
+        color: $color-green;
+      }
+    }
+  }
+  &.theme-blue {
+    .header-icon {
+      background: $color-blue;
+    }
+    .header-content {
+      a {
+        color: $color-blue;
+      }
+    }
+  }
   @include element(header) {
     margin-bottom: 20px;
     width: 100%;
