--- a/assets/css/element/_sitebar.scss
+++ b/assets/css/element/_sitebar.scss
@@ -93,12 +93,24 @@
       width: 50px;
       overflow: hidden;
     }
+    &.theme-orange {
+      li.ant-menu-item {
+        &.ant-menu-item-selected {
+          color: $color-orange;
+        }
+        &:hover {
+          * {
+            color: $color-orange;
+          }
+        }
+      }
+    }
     li.ant-menu-item {
       background: transparent;
       padding-left: 50px !important;
       position: relative;
       border-right: 0;
-
+      // color: $color-text;
       &.ant-menu-item-selected {
         box-shadow: $shadow;
         color: $color-primary;
