--- a/assets/css/element/_steps.scss
+++ b/assets/css/element/_steps.scss
@@ -8,6 +8,31 @@
       background: $color-white;
       box-shadow: $shadow;
     }
+    .ant-steps-item-container {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding-left: 20px;
+      &:hover {
+        .ant-steps-item-content .ant-steps-item-title {
+          color: $color-black !important;
+        }
+      }
+    }
+    .ant-steps-item-tail,
+    .ant-steps-item-tail {
+      display: none;
+      &::after {
+        display: none;
+      }
+    }
+    &.ant-steps-item-active,
+    &.ant-steps-item-finish {
+      .ant-steps-item-icon .ant-steps-icon-dot {
+        color: $color-orange;
+        background: $color-orange;
+      }
+    }
     .ant-steps-item-content {
       display: flex;
       align-items: center;
