--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -398,3 +398,12 @@ h5 {
     margin-left: auto;
   }
 }
+
+.umana-filter {
+  .visible-true {
+    display: block;
+  }
+  .visible-false {
+    display: none;
+  }
+}
