--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -20,6 +20,7 @@ form.ant-form.ant-form-horizontal {
     .ant-form-item-explain {
       font-size: 11px;
     }
+
     .help {
       position: absolute;
       top: -26px;
@@ -108,81 +109,6 @@ form.ant-form.ant-form-horizontal {
       border-top: 1px solid rgba($color-text, 0.2);
     }
   }
-  .umana-form--group {
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 10px 0 30px;
-    position: relative;
-    & > .ant-form-item.ant-row {
-      width: calc(33.33% - 20px);
-      margin: 0 10px;
-      flex: auto;
-      &.form-item--sm {
-        width: calc(33.33% - 20px);
-      }
-      &.form-item--fx {
-        width: calc(66% - 20px);
-      }
-      &.form-item--md {
-        width: 100%;
-        @include bp(xmedium) {
-          width: calc(50% - 20px);
-        }
-      }
-    }
-    .form-item--sm {
-      width: 100%;
-      @include bp(xmedium) {
-        width: calc(50% - 20px);
-      }
-      @include bp(large) {
-        width: calc(33.33% - 20px);
-      }
-    }
-    .form-item--md {
-      width: 100%;
-      @include bp(xmedium) {
-        width: calc(50% - 20px);
-      }
-    }
-    .form-item--xf {
-      width: 100%;
-      @include bp(xmedium) {
-        width: calc(66% - 20px);
-      }
-    }
-    .form-item--lg {
-      width: 100% !important;
-    }
-    .form-item--delete {
-      position: absolute;
-      right: 0;
-      top: 10px;
-      color: rgba($color-text, 0.5);
-      z-index: 10;
-      &:hover {
-        color: $color-text;
-      }
-    }
-    &.group-row {
-      margin: 0;
-      padding: 0;
-      border-top: 0;
-      margin-bottom: 10px;
-    }
-  }
-  .umana-form--footer {
-    padding: 10px 0 0;
-    width: 100%;
-    &.columns {
-      display: flex;
-      .ant-btn {
-        margin: 10px;
-      }
-    }
-  }
 }
 
 label {
@@ -194,17 +120,104 @@ label {
   }
 }
 
+.umana-form--group {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px 0 30px;
+  position: relative;
+  & > .ant-form-item.ant-row {
+    width: calc(33.33% - 20px);
+    margin: 0 10px;
+    flex: auto;
+    &.form-item--sm {
+      width: calc(33.33% - 20px);
+    }
+    &.form-item--fx {
+      width: calc(66% - 20px);
+    }
+    &.form-item--md {
+      width: 100%;
+      @include bp(xmedium) {
+        width: calc(50% - 20px);
+      }
+    }
+  }
+  .form-item--sm {
+    width: 100%;
+    @include bp(xmedium) {
+      width: calc(50% - 20px);
+    }
+    @include bp(large) {
+      width: calc(33.33% - 20px);
+    }
+  }
+  .form-item--md {
+    width: 100%;
+    @include bp(xmedium) {
+      width: calc(50% - 20px);
+    }
+  }
+  .form-item--xf {
+    width: 100%;
+    @include bp(xmedium) {
+      width: calc(66% - 20px);
+    }
+  }
+  .form-item--lg {
+    width: 100% !important;
+  }
+  .form-item--delete {
+    position: absolute;
+    right: 0;
+    top: 10px;
+    color: rgba($color-text, 0.5);
+    z-index: 10;
+    &:hover {
+      color: $color-text;
+    }
+  }
+  &.group-row {
+    margin: 0;
+    padding: 0;
+    border-top: 0;
+    margin-bottom: 10px;
+  }
+}
+.umana-form--footer {
+  padding: 10px 0 0;
+  width: 100%;
+  &.columns {
+    display: flex;
+    .ant-btn {
+      margin: 10px;
+    }
+  }
+}
+
 // space
 .ant-space.umana-form--group {
   border-top: 1px solid rgba($color-text, 0.2);
+  padding: 20px 0 !important;
   &:first-child {
     border-top: 0;
+    margin-top: 0 !important;
   }
   &.no-wrap {
+    &:first-child {
+      border-top: 0 !important;
+      margin-top: 0 !important;
+    }
     .ant-space-item {
       &:nth-child(1) {
         width: calc(33.33% - 20px);
       }
+    }
+  }
+  &.two-columns {
+    .ant-space-item {
+      width: calc(50% - 20px);
     }
   }
   &.academicLevel {
@@ -230,6 +243,34 @@ label {
       margin: 0;
     }
     &:nth-child(1) {
+      width: 100%;
+    }
+    &:last-child {
+      margin: 0;
+    }
+    .ant-space-item {
+      width: 100%;
+    }
+  }
+}
+
+.ant-space.umana-form--group.form-experience {
+  .ant-space-item {
+    width: calc(50% - 20px);
+    margin: 0 10px 10px;
+    .ant-space {
+      padding: 10px 0 0 !important;
+      &.full {
+        .ant-space-item {
+          width: 100%;
+        }
+      }
+    }
+    &:nth-child(1),
+    &:nth-child(6),
+    &:nth-child(9),
+    &:nth-child(10),
+    &:nth-child(11) {
       width: 100%;
     }
   }
